# tshirt_factory_mas

./: .env.example  .gitignore  QWEN.md  README.md  docker-compose.yml  live-snapshot-working.md  pyproject.toml
.playwright-mcp/: page-2026-06-04T15-23-12-184Z.yml  page-2026-06-04T15-23-20-748Z.yml  page-2026-06-04T15-23-33-008Z.yml  page-2026-06-04T15-24-10-406Z.yml  page-2026-06-04T15-25-20-652Z.yml  page-2026-06-04T15-32-01-862Z.yml  page-2026-06-04T15-32-12-811Z.yml  page-2026-06-04T15-33-31-353Z.yml  page-2026-06-04T15-34-58-340Z.yml  page-2026-06-04T15-35-08-368Z.yml  page-2026-06-04T15-35-24-531Z.yml  page-2026-06-04T15-35-53-598Z.yml  page-2026-06-04T15-36-09-048Z.yml  page-2026-06-04T15-36-20-686Z.yml
.qwen/: settings.json  settings.json.orig
.qwen/skills/agent-llm-contextual-decisions/: SKILL.md
.qwen/skills/docs-sync-after-port/: SKILL.md
.qwen/skills/flatten-src-hatchling/: SKILL.md
docs/: architecture.md
mcp_servers/: docx_server.py  pptx_server.py
src/: _entry.py  bus.py  logging_config.py  main.py
src/agents/: heat_press_agent.py  packaging_agent.py  printer_agent.py  quality_agent.py  scheduler_agent.py
src/config/: settings.py
src/equipment/: heat_press.py  packaging_station.py  printer.py  quality_station.py
src/graph/: builder.py  nodes.py  pipeline.py  state.py
src/llm/: heat_press_chain.py  packaging_chain.py  printer_chain.py  qc_chain.py  routing_chain.py  scheduler_chain.py
src/models/: llm_models.py  messages.py  order.py
src/ui/: __init__.py  _entry.py  factory.py  server.py  streamlit_app.py
src/ui/static/: app.js  (+4 more)
(+9 files in other folders)
