[project]
name = "tshirt-mas"
version = "0.1.0"
description = "Multi-Agent System for Automated T-Shirt Customization Workshop"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
dev = "_entry:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/agents",
    "src/config",
    "src/equipment",
    "src/graph",
    "src/llm",
    "src/models",
]

[tool.hatch.build.targets.wheel.force-include]
"src/main.py" = "main.py"
"src/bus.py" = "bus.py"
"src/_entry.py" = "_entry.py"
